# type-checker

./: CMakeLists.txt  README.md
src/: execute.cc  execute.h  execute_main.cc  main.cc  type_check.cc  type_check.h  type_check_main.cc
src/exceptions/: unreachable_error.cc  unreachable_error.h
src/lang/: lang_grammar.txt  lang_parsing.cc  lang_parsing.h  lang_scanning.cc  lang_scanning.h  state.cc  state.h  std_functions.cc  std_functions.h  token_type.h
src/lex_parse/: ast_node.cc  dfa.h  memo_map.h  parse_earley.cc  parse_earley.h  parse_node.cc  parse_node.h  scanning.cc  scanning.h  token.cc  token.h  token_type.cc
src/post_processing/: extract_args.cc  extract_args.h  extract_expr.cc  extract_expr.h  extract_fns.cc  extract_fns.h  extract_params.cc  extract_params.h  extract_s.cc  extract_s.h  extract_stmts.cc  extract_stmts.h  extract_vardef.cc  extract_vardef.h
src/program_representation/: array_access_node.cc  array_access_node.h  array_node.cc  array_node.h  assign_node.cc  assign_node.h  ast_clone.h  ast_node.cc  ast_node.h  ast_visit.h  binary_expr_node.cc  binary_expr_node.h  call_node.cc  call_node.h  fn_node.cc  fn_node.h  if_node.cc  if_node.h  literal_node.cc  literal_node.h  program_node.cc  program_node.h  ret_node.cc  ret_node.h  stmt_block_node.cc  stmt_block_node.h  unary_expr_node.cc  unary_expr_node.h  var_access_node.cc  var_access_node.h  var_decl_node.cc  var_decl_node.h  variable.cc  variable.h  while_node.cc  while_node.h
src/transformations/: visitor.cc  visitor.h
src/types/: lang_type.cc  lang_type.h  lang_type_graph.cc  lang_type_graph.h  lang_type_utils.cc  lang_type_utils.h
src/utils/: type_printer.cc  type_printer.h
src/visitors/: eval_visitor.cc  eval_visitor.h  eval_visitor_types.h  eval_visitor_utils.cc  eval_visitor_utils.h  scope_vars_visitor.cc  scope_vars_visitor.h  type_explore_visitor.cc  type_explore_visitor.h  type_visitor.cc  type_visitor.h  type_visitor2.cc  type_visitor2.h  type_visitor_old.cc  type_visitor_old.h  visitor.cc  visitor.h
tests/: array_init.rs  test_array_init.rs  test_array_manip.rs  test_array_return.rs  test_factorial.rs  test_fibonacci.rs  test_if_else.rs  test_literals.rs  test_matrix_mult.rs  test_nested_generics.rs  test_nested_generics2.rs  test_operators.rs  test_pascals_triangle.rs  test_sorting.rs  test_type_class_merging.rs  test_while.rs
